Optimize docker images, put cache invalidating instructions to the tail.

--- a/workers/dockerfiles/Dockerfile.downloaders
+++ b/workers/dockerfiles/Dockerfile.downloaders
@@ -8,13 +8,24 @@ WORKDIR /home/user
 COPY workers/R/dependencies/install_downloader_R_only.R .
 RUN Rscript install_downloader_R_only.R
 
+COPY workers/data_refinery_workers/downloaders/requirements.txt .
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed rpy2==3.4.5 && \
+    pip3 install --ignore-installed -r requirements.txt && \
+    # Clear out the pip cache.
+    rm -rf /root/.cache
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install --ignore-installed \
+        common/$(ls common -1 | sort --version-sort | tail -1)
+
 # Aspera will only install as the current user.
 # Even using `su - user &&` doesn't work...
-
 USER user
+
 # Install Aspera. We have to install it using Holland Computing Center's conda
 # repo because download.asperasoft.com now returns 403s
-
 RUN wget -q "https://anaconda.org/HCC/aspera-cli/3.9.1/download/\
 linux-64/aspera-cli-3.9.1-0.tar.bz2" && \
     [ "$(sha256sum aspera-cli-3.9.1-0.tar.bz2 | cut -d ' ' -f1)" =\
@@ -27,26 +38,13 @@ linux-64/aspera-cli-3.9.1-0.tar.bz2" && \
 # Now that we're done installing Aspera go back to being root for a bit.
 USER root
 
-RUN pip3 install --ignore-installed --upgrade pip && \
-    pip3 install --ignore-installed rpy2==3.4.5
-
-# Get the latest version from the dist directory.
-COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed \
-    common/$(ls common -1 | sort --version-sort | tail -1)
-
-COPY workers/data_refinery_workers/downloaders/requirements.txt .
-RUN pip3 install --ignore-installed -r requirements.txt && \
-    # Clear out the pip3 cache.
-    rm -r /root/.cache
+COPY .boto .boto
+COPY config config
+COPY workers/ .
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
-
-COPY .boto .boto
-COPY config config
-COPY workers/ .
 
 ENTRYPOINT []
