--- a/workers/dockerfiles/Dockerfile.affymetrix_local
+++ b/workers/dockerfiles/Dockerfile.affymetrix_local
@@ -6,20 +6,20 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 WORKDIR /home/user
 
 # Remove the version of common already installed.
-RUN rm -r common && \
+RUN rm -rf common && \
     pip3 uninstall -y data_refinery_common
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
 RUN pip3 install --ignore-installed --no-cache-dir \
-    common/$(ls common -1 | sort --version-sort | tail -1)
+        common/$(ls common -1 | sort --version-sort | tail -1)
+
+COPY config/ config/
+COPY workers/ .
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
-
-COPY config/ config/
-COPY workers/ .
 
 ENTRYPOINT []
