--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -69,11 +69,6 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
     useradd --create-home --home-dir /home/user -g user user
 
 WORKDIR /home/user
-RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/\
-phantomjs-2.1.1-linux-x86_64.tar.bz2" && \
-    tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
-    ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
-        /usr/local/bin/
 
 # We need a few special packages for QN.
 ENV R_LIBS=/usr/local/lib/R/site-library
@@ -86,28 +81,35 @@ RUN Rscript dependencies.R
 
 COPY workers/R/dependencies/qn/bioc/dependencies.R .
 RUN Rscript dependencies.R
-# End QN-specific
-
-RUN pip3 install --ignore-installed --upgrade pip && \
-    pip3 install --ignore-installed numpy scipy matplotlib \
-        pandas==0.25.3 scikit-learn sympy nose rpy2===3.4.5 tzlocal fancySVD
+# End QN-specific.
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed -r requirements.txt && \
-    pip3 install --ignore-installed numpy==1.16.0
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed nose numpy scipy matplotlib \
+        pandas==0.25.3 scikit-learn sympy rpy2===3.4.5 tzlocal fancySVD && \
+    pip3 install --ignore-installed -r requirements.txt && \
+    pip3 install --ignore-installed numpy==1.16.0 && \
+    # Clear out the pip cache.
+    rm -rf /root/.cache
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
 RUN pip3 install --ignore-installed \
-    common/$(ls common -1 | sort --version-sort | tail -1)
+        common/$(ls common -1 | sort --version-sort | tail -1) && \
+    # Install phantomjs.
+    wget "https://bitbucket.org/ariya/phantomjs/downloads/\
+phantomjs-2.1.1-linux-x86_64.tar.bz2" && \
+    tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
+    ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
+        /usr/local/bin/
+
+COPY .boto .boto
+COPY config/ config/
+COPY workers/ .
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
-
-COPY .boto .boto
-COPY config/ config/
-COPY workers/ .
 
 ENTRYPOINT []
