--- a/workers/dockerfiles/Dockerfile.salmon
+++ b/workers/dockerfiles/Dockerfile.salmon
@@ -5,6 +5,25 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /home/user
 
+COPY workers/R/dependencies/tximport/cran/dependencies.R tximport_dependencies.R
+RUN Rscript tximport_dependencies.R
+
+# Install tximport.
+COPY workers/R/dependencies/tximport/install_tximport.R .
+RUN Rscript install_tximport.R
+
+COPY workers/data_refinery_workers/processors/requirements.txt .
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed numpy && \
+    pip3 install --ignore-installed -r requirements.txt && \
+    # Clear out the pip cache.
+    rm -rf /root/.cache
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install --ignore-installed \
+        common/$(ls common -1 | sort --version-sort | tail -1)
+
 # Install Salmon
 # Tximport requires all experiments to be processed with the same version of
 # Salmon to work https://github.com/AlexsLemonade/refinebio/issues/1496.
@@ -25,48 +44,28 @@ v${SALMON_VERSION}/Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz" && \
     rm -f "Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz"
 # End Salmon installation.
 
-COPY workers/R/dependencies/tximport/cran/dependencies.R tximport_dependencies.R
-RUN Rscript tximport_dependencies.R
-
-# Install tximport.
-COPY workers/R/dependencies/tximport/install_tximport.R .
-RUN Rscript install_tximport.R
-
-RUN pip3 install --ignore-installed --upgrade pip && \
-    pip3 install --ignore-installed numpy
-
-# Get the latest version from the dist directory.
-COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed \
-    common/$(ls common -1 | sort --version-sort | tail -1)
-
-COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed -r requirements.txt && \
-    # Clear out the pip3 cache.
-    rm -r /root/.cache
-
-# Install SalmonTools.
-RUN git clone https://github.com/COMBINE-lab/SalmonTools.git && \
+ENV SRA_VERSION=2.9.1
+RUN \
+    # Install SalmonTools.
+    git clone https://github.com/COMBINE-lab/SalmonTools.git && \
     cd SalmonTools && \
     git checkout 3e6654c2c10a5225498b623056993947fa688afc && \
     cmake . -DCMAKE_INSTALL_PREFIX=/usr/local && \
     make install && \
-    rm -rf SalmonTools
-
-# Install sra-tools.
-ENV SRA_VERSION=2.9.1
-RUN wget -q "https://ftp.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/\
+    rm -rf SalmonTools && \
+    # Install sra-tools.
+    wget -q "https://ftp.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/\
 sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
     tar zxfv "sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
     cp -r "sratoolkit.${SRA_VERSION}-ubuntu64/bin/"* /usr/bin
+
+COPY .boto .boto
+COPY config/ config/
+COPY workers/ .
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
-
-COPY .boto .boto
-COPY config/ config/
-COPY workers/ .
 
 ENTRYPOINT []
