Add `--no-cache-dir`, optimize order.

--- a/common/dockerfiles/Dockerfile.common_tests
+++ b/common/dockerfiles/Dockerfile.common_tests
@@ -6,10 +6,9 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
 # For whatever reason this worked and 'en_US.UTF-8' did not.
 ENV LANG=C.UTF-8
+ENV R_LIBS=/usr/local/lib/R/site-library
 
 WORKDIR /home/user
-
-ENV R_LIBS=/usr/local/lib/R/site-library
 
 COPY workers/R/dependencies/install_bioc.R .
 RUN Rscript install_bioc.R
@@ -17,16 +16,14 @@ RUN Rscript install_bioc.R
 COPY workers/R/dependencies/affymetrix/install_affy_only.R .
 RUN Rscript install_affy_only.R
 
-COPY config config
-
 COPY common/requirements.txt .
-RUN pip3 install --ignore-installed -r requirements.txt && \
+RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt && \
     # Install this rpy2 here instead of via requirements.txt because
     # pip-compile throws an error for it.
-    pip3 install rpy2==3.4.5 && \
-    rm -rf /root/.cache
+    pip3 install --ignore-installed --no-cache-dir rpy2==3.4.5
 
 COPY common/ .
+COPY config config
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
