--- a/common/dockerfiles/Dockerfile.migrations
+++ b/common/dockerfiles/Dockerfile.migrations
@@ -9,8 +9,7 @@ RUN groupadd user && \
 WORKDIR /home/user
 
 COPY common/requirements.txt .
-RUN pip install --ignore-installed -r requirements.txt && \
-    rm -rf /root/.cache
+RUN pip install --ignore-installed --no-cache-dir -r requirements.txt
 
 COPY common/ .
 # Needed for migration 0006.
