--- a/foreman/dockerfiles/Dockerfile.foreman
+++ b/foreman/dockerfiles/Dockerfile.foreman
@@ -25,18 +25,17 @@ RUN apt-get update -qq && \
     rm -rf /var/lib/apt/lists/* && \
     groupadd user && \
     useradd --create-home --home-dir /home/user -g user user && \
-    pip3 install --ignore-installed --no-cache-dir --upgrade pip
+    pip3 install --ignore-installed --upgrade pip
 
 WORKDIR /home/user
 
+COPY foreman/requirements.txt .
+RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
+
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed \
-    common/$(ls common -1 | sort --version-sort | tail -1)
-
-COPY foreman/requirements.txt .
-RUN pip3 install --ignore-installed -r requirements.txt && \
-    rm -rf /root/.cache
+RUN pip3 install --ignore-installed --no-cache-dir \
+        common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY .boto .boto
 COPY config config
