--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -84,24 +84,23 @@ RUN Rscript dependencies.R
 # End QN-specific.
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --upgrade pip && \
-    pip3 install --ignore-installed nose numpy scipy matplotlib \
+RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
+    pip3 install --ignore-installed --no-cache-dir nose numpy scipy matplotlib \
         pandas==0.25.3 scikit-learn sympy rpy2===3.4.5 tzlocal fancySVD && \
-    pip3 install --ignore-installed -r requirements.txt && \
-    pip3 install --ignore-installed numpy==1.16.0 && \
-    # Clear out the pip cache.
-    rm -rf /root/.cache
+    pip3 install --ignore-installed --no-cache-dir -r requirements.txt && \
+    pip3 install --ignore-installed --no-cache-dir numpy==1.16.0
 
-# Get the latest version from the dist directory.
-COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed \
-        common/$(ls common -1 | sort --version-sort | tail -1) && \
-    # Install phantomjs.
-    wget "https://bitbucket.org/ariya/phantomjs/downloads/\
+# Install phantomjs.
+RUN wget -q "https://bitbucket.org/ariya/phantomjs/downloads/\
 phantomjs-2.1.1-linux-x86_64.tar.bz2" && \
     tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
     ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
         /usr/local/bin/
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install --ignore-installed --no-cache-dir \
+        common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY .boto .boto
 COPY config/ config/
