--- a/workers/dockerfiles/Dockerfile.illumina
+++ b/workers/dockerfiles/Dockerfile.illumina
@@ -5,12 +5,9 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /home/user
 
-COPY workers/R/dependencies/illumina/cran/dependencies.R .
-RUN Rscript dependencies.R
-
-# These are for Illumina.
-COPY workers/R/dependencies/illumina/bioc/dependencies.R .
-RUN Rscript dependencies.R
+COPY workers/R/dependencies/illumina/renv.lock .
+COPY workers/R/renv_load.R .
+RUN Rscript renv_load.R
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
 RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
