--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -99,6 +99,8 @@ COPY .boto .boto
 COPY config/ config/
 COPY workers/ .
 
+RUN rm -rf /root/.cache/*
+
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
