--- a/foreman/dockerfiles/Dockerfile.foreman
+++ b/foreman/dockerfiles/Dockerfile.foreman
@@ -1,31 +1,7 @@
-FROM ubuntu:18.04
+FROM ccdlstaging/dr_base:latest
 
 # Fail in case of an error at any stage in the pipe.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
-# For whatever reason this worked and 'en_US.UTF-8' did not.
-ENV LANG=C.UTF-8
-
-# Prevent tzdata from prompting us for a timezone and hanging the build.
-ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y software-properties-common && \
-    add-apt-repository ppa:apt-fast/stable && \
-    apt-get update -qq && \
-    apt-get install --no-install-recommends -y apt-fast && \
-    apt-fast update -qq && \
-    apt-fast install -y \
-        gcc \
-        libpq-dev \
-        python3 \
-        python3-pip && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    groupadd user && \
-    useradd --create-home --home-dir /home/user -g user user && \
-    pip3 install --ignore-installed --upgrade pip
 
 WORKDIR /home/user
 
