--- a/workers/data_refinery_workers/downloaders/requirements.in
+++ b/workers/data_refinery_workers/downloaders/requirements.in
@@ -1,4 +1,4 @@
-django>=3.2.5
+django>=3.2,<4
 requests>=2.23.0
 urllib3>=1.24.2
 psycopg2-binary>=2.8.4
@@ -9,3 +9,4 @@ vcrpy
 django-computedfields>=0.1.5
 pyyaml>=5.4
 sqlparse>=0.4.2
+rpy2==3.4.5
