--- a/workers/dockerfiles/Dockerfile.no_op
+++ b/workers/dockerfiles/Dockerfile.no_op
@@ -5,22 +5,16 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /home/user
 
-COPY workers/R/dependencies/no_op/cran/dependencies.R .
-RUN Rscript dependencies.R
-
-COPY workers/R/dependencies/no_op/install_gene_convert.R .
-RUN Rscript install_gene_convert.R
+COPY workers/R/dependencies/no_op/renv.lock .
+COPY workers/R/renv_load.R .
+RUN Rscript renv_load.R
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
-    pip3 install --ignore-installed --no-cache-dir numpy && \
-    pip3 install --ignore-installed --no-cache-dir -r requirements.txt
+RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Noop-specific.
 RUN mkdir -p gene_indexes
-
 WORKDIR /home/user/gene_indexes
-
 ENV ID_REFINERY_URL=https://zenodo.org/record/1410647/files/all_1536267482.zip
 RUN curl -O $ID_REFINERY_URL && \
     echo $ID_REFINERY_URL > /etc/identifier_refinery_url && \
@@ -38,6 +32,8 @@ RUN pip3 install --ignore-installed --no-cache-dir \
 COPY .boto .boto
 COPY config/ config/
 COPY workers/ .
+
+RUN rm -rf /root/.cache/*
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
