--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -13,8 +13,6 @@ ENV DEBIAN_FRONTEND=noninteractive
 # For whatever reason this worked and 'en_US.UTF-8' did not.
 ENV LANG=C.UTF-8
 
-COPY workers/CRAN.gpg .
-
 # RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
 # via https://github.com/ilikenwf/apt-fast/issues/85#issuecomment-261640099
 RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
@@ -29,13 +27,9 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
     add-apt-repository ppa:savoury1/llvm-defaults-10 && \
     apt-get update -qq && \
     apt-get install --no-install-recommends -y apt-fast apt-transport-https gpg-agent tzdata && \
-    apt-key add CRAN.gpg && \
-    echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
-        >> /etc/apt/sources.list.d/added_repos.list && \
     apt-fast update -qq && \
     apt-fast install -y \
         build-essential \
-        ccache \
         cmake \
         curl \
         cython3 \
@@ -55,16 +49,17 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
         mercurial \
         pkg-config \
         python3-pip \
+        python3-pybind11 \
         python3.8 \
         python3.8-dev \
         r-base-core \
         wget && \
     apt-get clean && \
-    rm CRAN.gpg && \
     rm -rf /var/lib/apt/lists/* && \
     ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config && \
     update-alternatives --install /usr/bin/python3 python3 \
         /usr/bin/python3.8 1 && \
+    pip3 install --upgrade pip setuptools && \
     groupadd user && \
     useradd --create-home --home-dir /home/user -g user user
 
@@ -77,11 +72,9 @@ COPY workers/R/renv_load.R .
 RUN Rscript renv_load.R
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
-    pip3 install --ignore-installed --no-cache-dir nose numpy scipy matplotlib \
-        pandas==0.25.3 scikit-learn sympy rpy2===3.4.5 tzlocal fancySVD && \
-    pip3 install --ignore-installed --no-cache-dir -r requirements.txt && \
-    pip3 install --ignore-installed --no-cache-dir numpy==1.16.0
+RUN pip3 install --ignore-installed --no-cache-dir nose numpy scipy matplotlib \
+        pandas==0.25.3 scikit-learn sympy tzlocal fancySVD && \
+    pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Install phantomjs.
 RUN wget -q "https://bitbucket.org/ariya/phantomjs/downloads/\
