--- a/workers/dockerfiles/Dockerfile.affymetrix_local
+++ b/workers/dockerfiles/Dockerfile.affymetrix_local
@@ -3,6 +3,8 @@ FROM ccdlstaging/dr_affymetrix:latest
 # Fail in case of an error at any stage in the pipe.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+USER root
+
 WORKDIR /home/user
 
 # Remove the version of common already installed.
@@ -16,6 +18,8 @@ RUN pip3 install --ignore-installed --no-cache-dir \
 
 COPY config/ config/
 COPY workers/ .
+
+RUN rm -rf /root/.cache/*
 
 ARG SYSTEM_VERSION
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
