--- a/api/dockerfiles/Dockerfile.api_production
+++ b/api/dockerfiles/Dockerfile.api_production
@@ -15,6 +15,7 @@ WORKDIR /home/user
 
 COPY api/requirements.txt .
 RUN pip install --upgrade pip && \
+    pip install setuptools==65.7 && \
     pip install --ignore-installed -r requirements.txt && \
     pip install --ignore-installed uwsgi && \
     rm -r /root/.cache
