--- a/common/dockerfiles/Dockerfile.base
+++ b/common/dockerfiles/Dockerfile.base
@@ -59,7 +59,8 @@ RUN apt-get update && \
     ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config && \
     update-alternatives --install \
         /usr/bin/python3 python3 /usr/bin/python3.8 1 && \
-    pip3 install --upgrade pip setuptools && \
+    pip3 install --upgrade pip && \
+    pip3 install setuptools==65.7 && \
     groupadd user && \
     useradd --create-home --home-dir /home/user/ -g user user && \
     chown -R user /home/user/
