--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -59,8 +59,7 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
     ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config && \
     update-alternatives --install /usr/bin/python3 python3 \
         /usr/bin/python3.8 1 && \
-    pip3 install --upgrade pip && \
-    pip3 install setuptools==65.7 && \
+    pip3 install --upgrade pip setuptools && \
     groupadd user && \
     useradd --create-home --home-dir /home/user -g user user
 
