--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -478,7 +478,7 @@ jobs:
         name: Set the $CI_TAG environment variable
         run: |
           source scripts/common.sh
-          echo "::set-output name=branch::$(get_master_or_dev ${GITHUB_REF#refs/tags/})"
+          echo "branch=$(get_master_or_dev ${GITHUB_REF#refs/tags/})" >> $GITHUB_OUTPUT
 
   deploy:
     if: startsWith(github.ref, 'refs/tags/v') && ! endsWith(github.ref, '-hotfix')
