--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -40,7 +40,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Free up space
-        run: ./.github/scripts/cleanup_instance.sh
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
 
       - name: Login to Packages Container registry
         uses: docker/login-action@v2
@@ -128,7 +132,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Free up space
-        run: ./.github/scripts/cleanup_instance.sh
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
 
       - name: Login to Packages Container registry
         uses: docker/login-action@v2
@@ -229,7 +237,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Free up space
-        run: ./.github/scripts/cleanup_instance.sh
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
 
       - name: Login to Packages Container registry
         uses: docker/login-action@v2
@@ -364,8 +376,13 @@ jobs:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     steps:
       - uses: actions/checkout@v3
+
       - name: Free up space
-        run: ./.github/scripts/cleanup_instance.sh
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
 
       - name: Login to Packages Container registry
         uses: docker/login-action@v2
