--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -89,6 +89,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Free up space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+
       - name: Login to Packages Container registry
         uses: docker/login-action@v2
         with:
