--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,15 @@
 github_checks:
     annotations: false
+
+ignore:
+    - "**/tests/**"
+    - "**/*.sh"
+
+coverage:
+    status:
+        project:
+            default:
+                informational: true
+        patch:
+            default:
+                informational: true
