--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,6 @@
 ---
 exclude: '^(.*\.pem|.*\.tfvars)$'
 
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.4.0
@@ -33,18 +32,10 @@ repos:
       - id: shell-lint
         # We didn't write codecov.sh, we just get it from their servers
         # The other one is a template.
-        exclude: "codecov.sh|infrastructure/workers-configuration/workers-instance-user-data.tpl.sh"
+        exclude: 'codecov.sh|infrastructure/workers-configuration/workers-instance-user-data.tpl.sh'
         args:
-            # SC2154: Exclude warnings about variables being used without being
-            #         assigned, because we sometimes use lowercase environment
-            #         variables which shellcheck does not recognize.
-            # SC1090,SC1091: Don't try to follow sourced files
+          # SC2154: Exclude warnings about variables being used without being
+          #         assigned, because we sometimes use lowercase environment
+          #         variables which shellcheck does not recognize.
+          # SC1090,SC1091: Don't try to follow sourced files
           - --exclude=SC2154,SC1090,SC1091
-
-  - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.45.0
-    hooks:
-      - id: terraform_validate
-        # It's a small file that gets copied up temporarily during deploys.
-        # Because it's not where it gets run it seems to be in a module when it's not.
-        exclude: "infrastructure/deploy/ci_ingress.tf"
