--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -68,7 +68,7 @@ WORKDIR /home/user
 ENV R_LIBS=/usr/local/lib/R/site-library
 
 COPY workers/R/dependencies/compendia/renv.lock .
-COPY workers/R/renv_load.R .
+COPY common/R/renv_load.R .
 RUN Rscript renv_load.R
 
 COPY workers/data_refinery_workers/requirements/compendia.txt requirements.txt
@@ -82,7 +82,8 @@ RUN wget -q "https://bitbucket.org/ariya/phantomjs/downloads/\
 phantomjs-2.1.1-linux-x86_64.tar.bz2" && \
     tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
     ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
-        /usr/local/bin/
+        /usr/local/bin/ && \
+    rm phantomjs-2.1.1-linux-x86_64.tar.bz2
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
