--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -3,7 +3,6 @@ name: refine.bio CI/CD
 on: push
 
 env:
-  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   DEPLOY_IP_ADDRESS: ${{ secrets.DEPLOY_IP_ADDRESS }}
   DOCKER_BUILDKIT: 1
   DOCKER_ID: ${{ secrets.DOCKER_ID }}
@@ -142,7 +141,13 @@ jobs:
           mkdir -p test_volume
           sudo chmod -R a+rw test_volume
           api/run_tests.sh
-          .github/scripts/upload_test_coverage.sh api
+          .github/scripts/prepare_test_coverage.sh api
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./test_volume/api_coverage.xml
+          name: API Tests
 
   test_api_base:
     name: Test API Base
@@ -246,7 +251,13 @@ jobs:
           mkdir -p workers/test_volume
           sudo chmod -R a+rw workers/test_volume
           common/run_tests.sh
-          .github/scripts/upload_test_coverage.sh common
+          .github/scripts/prepare_test_coverage.sh common
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./test_volume/common_coverage.xml
+          name: Common Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
@@ -334,7 +345,13 @@ jobs:
           mkdir -p workers/test_volume
           sudo chmod -R a+rw workers/test_volume
           foreman/run_tests.sh --exclude-tag=end_to_end
-          .github/scripts/upload_test_coverage.sh foreman
+          .github/scripts/prepare_test_coverage.sh foreman
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./test_volume/foreman_coverage.xml
+          name: Foreman Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
@@ -379,7 +396,13 @@ jobs:
           mkdir -p workers/test_volume
           sudo chmod -R a+rw workers/test_volume
           .github/scripts/filter_tests.sh -t illumina
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: Illumina Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
@@ -423,7 +446,13 @@ jobs:
         run: |
           sudo chmod -R a+rw workers/test_volume
           .github/scripts/filter_tests.sh -t salmon
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: Salmon Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
@@ -468,25 +497,43 @@ jobs:
           mkdir -p workers/test_volume
           sudo chmod -R a+rw workers/test_volume
           .github/scripts/filter_tests.sh -t smasher
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
 
       - name: Run Janitor Tests
         run: |
           sudo -E chown -R $USER:$USER workers/test_volume
           .github/scripts/filter_tests.sh -t janitor
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: Janitor Tests
 
       - name: Run Compendia Tests
         run: |
           sudo -E chown -R $USER:$USER workers/test_volume
           .github/scripts/filter_tests.sh -t compendia
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: Compendia Tests
 
       - name: Run QN Tests
         run: |
           sudo -E chown -R $USER:$USER workers/test_volume
           .github/scripts/filter_tests.sh -t qn
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: QN Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
@@ -532,7 +579,13 @@ jobs:
           mkdir -p workers/test_volume
           sudo chmod -R a+rw workers/test_volume
           .github/scripts/filter_tests.sh -t transcriptome
-          .github/scripts/upload_test_coverage.sh workers
+          .github/scripts/prepare_test_coverage.sh workers
+
+      - name: Upload Test Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./workers/test_volume/workers_coverage.xml
+          name: Transcriptome Tests
 
       - name: Login to Packages Container Registry
         uses: docker/login-action@v2
