Update tests running scripts
  - Use versioned docker images
  - Exclude tests from coverage run

--- a/api/dockerfiles/Dockerfile.api_base
+++ b/api/dockerfiles/Dockerfile.api_base
@@ -23,6 +23,7 @@ RUN pip install --ignore-installed \
 
 COPY api/ .
 COPY config/ config/
+COPY setup.cfg .
 
 ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
