--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,11 @@
-[coverage:report]
-include =
-    data_refinery_api/*
+[coverage:run]
 omit =
-    data_refinery_api/wsgi.py
+    tests/*
+    manage.py
+    settings.py
+    setup.py
+    urls.py
+    wsgi.py
 
 [pep8]
 max-line-length = 100
