Rename `get_master_or_dev` to `get_deploy_branch` everywhere

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -570,7 +570,7 @@ jobs:
       - name: Set the $MASTER_OR_DEV and $CI_TAG Environment Variables
         run: |
           source scripts/common.sh
-          echo "MASTER_OR_DEV=$(get_master_or_dev ${GITHUB_REF#refs/tags/})" >> $GITHUB_ENV
+          echo "MASTER_OR_DEV=$(get_deploy_branch ${GITHUB_REF#refs/tags/})" >> $GITHUB_ENV
           # Remove /ref/tags/ from the beginning of the tag name
           echo "CI_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
@@ -632,7 +632,7 @@ jobs:
       - name: Set the $MASTER_OR_DEV and $CI_TAG Environment Variables
         run: |
           source scripts/common.sh
-          echo "MASTER_OR_DEV=$(get_master_or_dev ${GITHUB_REF#refs/tags/})" >> $GITHUB_ENV
+          echo "MASTER_OR_DEV=$(get_deploy_branch ${GITHUB_REF#refs/tags/})" >> $GITHUB_ENV
           # Remove /ref/tags/ from the beginning of the tag name
           echo "CI_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
@@ -679,4 +679,4 @@ jobs:
         name: Set the $CI_TAG Environment Variable
         run: |
           source scripts/common.sh
-          echo "branch=$(get_master_or_dev ${GITHUB_REF#refs/tags/})" >> $GITHUB_OUTPUT
+          echo "branch=$(get_deploy_branch ${GITHUB_REF#refs/tags/})" >> $GITHUB_OUTPUT
